LabmdaTest class sumOfId update